@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.3 2021/10/26 10:18:17 nia Exp $
-
-BLAKE2s (case-1.5.3.tar.gz) = d91ac9e9bf85e140888721629ddcf01be22e56796b393abe9ae9e265bcaf9a83
-SHA512 (case-1.5.3.tar.gz) = ae98a571c282f80c685c42ab1dc578847fe88cf8cd07faff505a8df8e3282a602908a8780ab88b36851e3ee6f3c178405e5c50776fd0f49fcc990087575f2958
-Size (case-1.5.3.tar.gz) = 58469 bytes
